# legal_dashboard_service

./: DEPLOYMENT_README.md  DOCKER_README.md  EC2_DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_SETUP.md  README.md  dashboardui_f87fd69b-679a-4c09-bc94-4a6907f7700e.spec.ts  database_manager.py  deploy-ec2.sh  docker-compose.yml  docker-manage.sh  example_mongo_usage.py  monitor.sh  pyproject.toml  quick-start-ec2.sh  settings.py  sync_data.py  sync_police_data.py
.github/workflows/: build-and-push.yml  deploy-ec2.yml
app/: app.py
app/assets/: style.css
app/components/: __init__.py  charts.py  header.py  loading_error.py  police_dashboard.py  police_type_detail.py  sidebar.py  statistics_dashboard.py  stats_cards.py  status_cards.py
app/states/: __init__.py  navigation_state.py  police_data_state.py  success_rate_calculator.py  success_rate_utils.py
deployment/: .env.example  .env.prod  Dockerfile.backend  Dockerfile.frontend  Dockerfile.reflex  Dockerfile.sync  backup-mongodb.sh  build-and-push.sh  deploy-ec2.sh  docker-compose.prod.yml  docker-compose.prod_aux.yml  docker-compose.yml  manage.sh  nginx-frontend.conf  nginx.conf
models/: __init__.py  base_classes.py  police_movement.py  police_registration.py  stat_registration.py
mongo-init/: 01-init-db.js
services/: __init__.py  police_data_mongo_service.py  police_movement_service.py  police_registration_service.py
services/police/: police_data_mongo_service.py  police_movement_service.py  police_registration_service.py
services/stats/: stats_data_mongo_service.py  (+1 more)
tests/: test_sucess_rate_calculation.py
(+22 files in other folders)
