[project]
name = "legal-dashboard-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2.9",
    "pymongo>=4.14.0",
    "reflex>=0.8.8",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "black>=25.1.0",
]
